--- a/formatter_lib/CMakeLists.txt
+++ b/formatter_lib/CMakeLists.txt
@@ -1,12 +1,6 @@
-
 cmake_minimum_required(VERSION 3.4)
-
-project(formatter_lib)
-
+project(formatter)
 set(CMAKE_CXX_STANDARD 11)
-
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
 add_library(formatter STATIC formatter.cpp)
-
 target_include_directories(formatter PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
