--- a/hello_world_application/CMakeLists.txt
+++ b/hello_world_application/CMakeLists.txt
@@ -1,8 +1,8 @@
-cmake_minimum_required(VERSION 3.4)
+cmake_minimum_required(VERSION 3.10)
 project(solver)
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-add_executable(solver equation.cpp)
+add_executable(solver ../solver_application/equation.cpp)
 target_link_libraries(solver PRIVATE solver_lib formatter_ex)
 target_include_directories(solver PRIVATE
     ${CMAKE_SOURCE_DIR}/formatter_ex_lib
